--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,25 @@
         android:theme="@style/Theme.JuegoDeMemoria"
         tools:targetApi="31">
         <activity
-            android:name=".FinalActivity"
-            android:launchMode="standard"
+            android:name=".PruebaDialogo"
             android:exported="false" />
+        <activity
+            android:name=".FinalActivity"
+            android:exported="false"
+            android:launchMode="standard" />
         <activity
             android:name=".HelpActivity"
-            android:launchMode="standard"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="standard" />
         <activity
             android:name=".GameActivity"
-            android:screenOrientation="portrait"
+            android:exported="false"
             android:launchMode="standard"
-            android:exported="false" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MenuActivity"
-            android:launchMode="standard"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="standard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
